--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -22,6 +22,7 @@
 	<script src="js/lib/angular/angular.js"></script>
 	<script src="js/lib/angular/angular-route.js"></script>
 	<script src="js/lib/angular/angular-resource.js"></script>
+	<script src="js/lib/angular/angular-sanitize.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
 	<script src="js/filters.js"></script>
