--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -17,7 +17,7 @@
 	<script src="js/lib/jquery/jquery-2.1.1.js"></script>
 	<script src="js/lib/bootstrap.min.js"></script>
 	<script src="js/lib/plugins/metisMenu/jquery.metisMenu.js"></script>
-	
+	<script src="js/lib/sb-admin.js"></script>
 
 	<script src="js/lib/angular/angular.js"></script>
 	<script src="js/lib/angular/angular-route.js"></script>
@@ -35,9 +35,76 @@
 <body> 
 
 	<div id="wrapper">
+
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="margin-bottom: 0">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">Gestion des charges d'enseignement</a>
+      </div>
+      <!-- /.navbar-header -->
+
+      <ul class="nav navbar-top-links navbar-right">
+      <!-- dropdown-user -->
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+            <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
+          </a>
+          <ul class="dropdown-menu dropdown-user">
+            <li><a href="#"><i class="fa fa-user fa-fw"></i> Utilisateur</a>
+            </li>
+            <li class="divider"></li>
+            <li><a href="#"><i class="fa fa-sign-out fa-fw"></i>Déconnexion</a>
+            </li>
+          </ul>
+          <!-- /.dropdown-user -->
+        </li>
+        <!-- /.dropdown -->
+      </ul>
+      <!-- /.navbar-top-links -->
+
+      <div class="navbar-default navbar-static-side" role="navigation">
+        <div class="sidebar-collapse">
+          <ul class="nav" id="side-menu">
+            <li class="sidebar-search">
+              <div class="input-group custom-search-form">
+                <input type="text" class="form-control" placeholder="Search...">
+                <span class="input-group-btn">
+                  <button class="btn btn-default" type="button">
+                    <i class="fa fa-search"></i>
+                  </button>
+                </span>
+              </div>
+              <!-- /input-group -->
+            </li>
+            <li>
+              <a href="index.html"><i class="fa fa-arrow-right"></i> Dashboard</a>
+            </li>
+            <li>
+              <a href="tables.html"><i class="fa fa-arrow-right"></i> Personnes</a>
+            </li>
+            <li>
+              <a href="forms.html"><i class="fa fa-arrow-right"></i> Forms</a>
+            </li>
+          </ul>
+          <!-- /#side-menu -->
+        </div>
+        <!-- /.sidebar-collapse -->
+      </div>
+      <!-- /.navbar-static-side -->
+    </nav>
+
 	
-	    <div id="page-wrapper" class="margintop">
-   			<div ng-view></div>
+	    <div id="page-wrapper">
+	    	<div class="row">
+	    			<div class="col-lg-12">
+   						<div ng-view></div>
+   					</div>
+   			</div>
 	    </div>
 	          
   </div>
