Ajout des pages formations

--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -79,7 +79,7 @@
               <a href="#/personnes"><i class="fa fa-arrow-right"></i> Personnes</a>
             </li>
             <li>	
-              <a href="forms.html"><i class="fa fa-arrow-right"></i> Forms</a>
+              <a href="#/formations"><i class="fa fa-arrow-right"></i> Formations</a>
             </li>
           </ul>
           <!-- /#side-menu -->
