ajout de promotion

--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -50,7 +50,7 @@
       <ul class="nav navbar-top-links navbar-right">
       <!-- dropdown-user -->
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="">
             <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
           </a>
           <ul class="dropdown-menu dropdown-user">
@@ -80,6 +80,9 @@
             </li>
             <li>	
               <a href="#/formations"><i class="fa fa-arrow-right"></i> Formations</a>
+            </li>
+            <li>  
+              <a href="#/promotions"><i class="fa fa-arrow-right"></i> Promotions</a>
             </li>
           </ul>
           <!-- /#side-menu -->
