--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -26,6 +26,7 @@
 	<script src="js/controllers.js"></script>
 	<script src="js/filters.js"></script>
 	<script src="js/services.js"></script>
+	<script src="js/directives.js"></script>
 	<!-- <script src="js/lib/angular/angular-animate.js"></script>
 	<script src="js/animations.js"></script>
 	 -->
