--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -22,6 +22,13 @@
 	<script src="js/lib/angular/angular-route.js"></script>
 	<script src="js/lib/angular/angular-resource.js"></script>
 	<script src="js/lib/angular/angular-sanitize.js"></script>
+
+  <script src="js/lib/d3.js"></script>
+  <script src="js/lib/nv.d3.js"></script>
+  <script src="js/lib/angularjs-nvd3-directives.js"></script>
+  <link rel="stylesheet" href="css/nv.d3.css" />
+
+
 	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
 	<script src="js/filters.js"></script>
