ajout du CRUD pour UV

--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -89,11 +89,14 @@
             <li>	
               <a href="#/formations"><i class="fa fa-arrow-right"></i> Formations</a>
             </li>            
-            <li>	
-              <a href="#/statistiques"><i class="fa fa-arrow-right"></i> Statistiques</a>
+            <li>  
+              <a href="#/promotions"><i class="fa fa-arrow-right"></i> Promotions</a>
             </li>
             <li>  
-              <a href="#/promotions"><i class="fa fa-arrow-right"></i> Promotions </a>
+              <a href="#/uvs"><i class="fa fa-arrow-right"></i> Uv</a>
+            </li>
+            <li>  
+              <a href="#/statistiques"><i class="fa fa-arrow-right"></i> Statistiques</a>
             </li>
           </ul>
           <!-- /#side-menu -->
